fix gulp error of compiling sass

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ h1 {
   |  |__/  |  |   |  |
   |_______/|__|   |__|
 
-  *** How can I help?. I am an observant, assured developer who can help create order in chaos. ***
+  *** Whoa! Inspecting my element? At least buy me dinner first. ***
 
 -->
     <!--[if lt IE 7]>
